--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,12 @@
   #followersList {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     margin-top: 20px;
+    height: 200px;
+    width: 500px;
+    overflow: auto;
+
   }
   
   .follower-item {
