--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 
-/* styles.css */
-
-.app {
+body {
+    background: linear-gradient(to bottom, #2c3e50, #1f2d3d);
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Arial', sans-serif;
+    color: #fff;
+  }
+  
+  .app {
     max-width: 600px;
-    margin: 0 auto;
+    text-align: center;
+    margin: 20px;
     padding: 20px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    transition: background 0.3s ease-in-out;
   }
   
   label {
+    font-size: 3em;
+    text-align: center;
     display: block;
-    margin-bottom: 10px;
+    margin: 10px;
+    /* color: #3498db; */
+    background: -webkit-linear-gradient(#eee, #3e9fe0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Zen Dots', sans-serif;
   }
   
   input {
-    width: 100%;
+    text-align: center;
+    width: 90%;
     padding: 8px;
     margin-bottom: 10px;
+    border: 1px solid #3498db;
+    border-radius: 5px;
+    background-color: #2c3e50;
+    color: #fff;
   }
   
   button {
@@ -24,6 +50,13 @@
     color: #fff;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.5s;
+  }
+  
+  button:hover {
+    transform: scale(1.05);
+    background-color: #2980b9;
   }
   
   #user-details {
@@ -39,22 +72,24 @@
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 10px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  #user-details img:hover {
+    transform: scale(1.1);
   }
   
   #followersList {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
     margin-top: 20px;
-    height: 200px;
-    width: 500px;
-    overflow: auto;
-
   }
   
   .follower-item {
     margin: 10px;
     text-align: center;
+    transition: transform 0.3s ease-in-out;
   }
   
   .follower-item img {
@@ -62,32 +97,108 @@
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+    transition: transform 0.3s ease-in-out;
   }
   
   .follower-item p {
     margin-top: 5px;
   }
   
-
-#followersList {
+  .follower-item:hover {
+    transform: scale(1.1);
+  }
+  .orgsContainer h2{
+    text-decoration: underline;
+  }
+  .orgsContainerinner {
+    padding: 5px;
+  }
+  
+  .starRepoContainer {
+    padding: 0px 0px 20px 40px;
+  background: rgba(0, 0, 0, 0.8);
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-.follower-item {
-  margin: 10px;
+  flex-direction: column;
   text-align: center;
+  border-radius: 10px;
+
+  margin-top: 30px;
+  }
+  .starRepoInner{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    overflow: hidden;
+  }
+  
+  .starRepoContainer span {
+    margin: 5px;
+    font-size: 1em;
+    transition: all 0.6s;
+    text-align: left;
+  }
+  
+  .starRepoContainer span:hover {
+    transform: scale(1.1);
+  }
+  
+  .starRepoContainer a {
+    text-decoration: none;
+    margin-left: 5px;
+    color: #fff;
+    transition: all 0.6s;
+  }
+  .starRepoContainer a:hover{
+    
+    color: rgba(0, 234, 179, 0.703);
+    text-decoration: underline;
+  }
+  .starRepoContainer h2{
+    font-size: 3em;
+    text-decoration: underline overline;
+    color: #1181cc;
+    margin-right: 10px;
+  }
+  
+  .floating-container {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .followerContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    transition: all 0.3s;
+  }
+  .pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
 }
 
-.follower-item img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
+.pagination button {
+  margin: 2px 8px;
+  padding: 8px 12px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ;
 }
 
-.follower-item p {
-  margin-top: 5px;
+.pagination button:hover {
+    transform: scale(1.1);
+  background-color: #2980b9;
+}
+
+.pagination button.active {
+  background-color: #2980b9;
 }
