--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@ body {
     padding: 20px;
     background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
-    transition: background 0.3s ease-in-out;
   }
   
   label {
@@ -46,6 +45,7 @@ body {
   
   button {
     padding: 10px;
+    margin-top: 5px;
     background-color: #3498db;
     color: #fff;
     border: none;
