--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Arial', sans-serif;
+    /* font-family: 'Arial', sans-serif; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #fff;
   }
   
@@ -18,6 +19,7 @@ body {
     padding: 20px;
     background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
+    
   }
   
   label {
@@ -78,7 +80,17 @@ body {
   #user-details img:hover {
     transform: scale(1.1);
   }
-  
+  .userNameBio{
+    color: rgba(0, 234, 179, 0.703);
+    margin-right: 2px;
+    font-size: 1.2em;
+    font-weight: 500;
+    
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+  }
+  #organisation{
+    color: #1181cc;
+  }
   #followersList {
     display: flex;
     flex-wrap: wrap;
@@ -109,6 +121,7 @@ body {
   }
   .orgsContainer h2{
     text-decoration: underline;
+    color: #1181cc;
   }
   .orgsContainerinner {
     padding: 5px;
@@ -121,7 +134,6 @@ body {
   flex-direction: column;
   text-align: center;
   border-radius: 10px;
-
   margin-top: 30px;
   }
   .starRepoInner{
