--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 body {
     background: linear-gradient(to bottom, #2c3e50, #1f2d3d);
     margin: 0;
@@ -13,9 +15,11 @@ body {
   }
   
   .app {
+
     max-width: 600px;
+    min-width:100px;
     text-align: center;
-    margin: 20px;
+    margin: 20px 20px 20px 45px;
     padding: 20px;
     background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
@@ -65,7 +69,21 @@ body {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
+    padding-left: 10%;
+    text-align: left;
+    overflow: hidden;
+  }
+  #user-details h2{
+    font-size: 2.3em;
+    
+    /* color: #8df50ea2; */
+    /* color: linear-gradient(to bottom,rgb(0, 234, 125),  #1181cc); */
+    background: -webkit-linear-gradient(#eee,rgb(0, 234, 125), #3e9fe0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-decoration: underline ;
+
   }
   
   #user-details img {
@@ -79,6 +97,17 @@ body {
   
   #user-details img:hover {
     transform: scale(1.1);
+  }
+  #user-details h3{
+    font-size: 2.5em;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    /* font-family: 'Glass Antiqua', cursive; */
+    /* font-family: 'Great Vibes', cursive; */
+    background: -webkit-linear-gradient(#2980b9,rgba(215, 0, 234, 0.879),rgba(29, 167, 188, 0.943), #e03e92);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Lobster Two', sans-serif;
+    letter-spacing: 3px;
   }
   .userNameBio{
     color: rgba(0, 234, 179, 0.703);
@@ -168,7 +197,10 @@ body {
   .starRepoContainer h2{
     font-size: 3em;
     text-decoration: underline overline;
-    color: #1181cc;
+    /* color: #1181cc; */
+    background: -webkit-linear-gradient(#2980b9,rgba(29, 167, 188, 0.943), #46e03e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin-right: 10px;
   }
   
